feat: PlayerCard component

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -2,4 +2,11 @@
     width: 100vw;
     height: 100vh;
     background-size: cover;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    .player {
+        margin-left: 30%;
+    }
 }
