--- a/src/styles/Player.module.scss
+++ b/src/styles/Player.module.scss
@@ -7,7 +7,8 @@
     padding: 10px 20px 20px 20px;
     border-radius: 10px;
 
-    h2,h3 {
+    h2,
+    h3 {
         font-family: "Poppins", sans-serif;
     }
 
